--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -16,7 +16,8 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:weightSum="1">
 
         <TextView
             android:layout_width="match_parent"
@@ -40,13 +41,15 @@
             android:layout_height="wrap_content"
             android:id="@+id/cmdBoton"
             android:text="@string/Saludar"
-            android:elevation="0dp" />
+            android:elevation="0dp"
+            android:onClick="Saludar" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/lblMensaje"
             android:textStyle="normal|bold"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:layout_weight="0.06" />
     </LinearLayout>
 </RelativeLayout>
